# SimPascal

./: 1.ll  1.pas  2.ll  2.pas  CMakeCache.txt  CMakeLists.txt  Makefile  Problem  README.md  SimPascal  SimPascal.l  SimPascal.y  clean.sh  cmake_install.cmake  input.txt  main.cpp  parser.cpp  parser.hpp  run.sh  runpas.sh  temp.txt  test.cpp  test.sh  token.cpp  tokenizer.cpp  tree.json
.history/: 1_20220511145738.pas  1_20220511150037.pas  1_20220511151326.pas  1_20220511151351.pas  1_20220511151355.pas  1_20220511152954.pas  1_20220511153242.pas  SimPascal_20220511152601.y  SimPascal_20220511153746.l  SimPascal_20220511154035.l  char_20220511154206.pas  char_20220511154210.pas  main_20220511151758.cpp
.history/VIS/: NodeVis_20220511152245.cpp  NodeVis_20220511153127.cpp  ProgramVis_20220511151923.cpp  ProgramVis_20220511151944.cpp  ProgramVis_20220511152024.cpp  ProgramVis_20220511152057.cpp  ProgramVis_20220511152122.cpp  ProgramVis_20220511153022.cpp  TypeVis_20220510162632.cpp  TypeVis_20220511152139.cpp  TypeVis_20220511152218.cpp  TypeVis_20220511152309.cpp  TypeVis_20220511152338.cpp  TypeVis_20220511152421.cpp  TypeVis_20220511152445.cpp  TypeVis_20220511153108.cpp  TypeVis_20220511153113.cpp
AST/: AST.h  Const.h  Node.h  Program.h  Stmt.h  Type.h
Doc/: Simple Pascal.md  报告.md
VIS/: ConstVis.cpp  NodeVis.cpp  ProgramVis.cpp  StmtVis.cpp  TypeVis.cpp  VIS.h
generator/: CodeGenerator.cpp  CodeGenerator.h  genConstType.cpp  genExp.cpp  genFunc.cpp  genProgram.cpp  genStmt.cpp
pascal/: 1.pas  2.pas  3.pas  autoadvisor.json  autoadvisor.s  char.pas  func.pas  matrix.json  matrix.s  quicksort.json  quicksort.s  real.pas  record.pas  t.pas  test.pas
tester/auto-advisor/: darwin-amd64
tester/quicksort/: darwin-amd64
